tests/e2e/semantics/time_op_int.story
a = 5s
b = a + 10
